--- a/views/home.ejs
+++ b/views/home.ejs
@@ -89,6 +89,52 @@
 
           <div class="mid-5">
 
+                <div class="part-1">
+ 
+                <p>Top carpool routes</p>
+
+                      <ul>
+                        <li>Delhi → Chandigarh</li>
+                        <li>Mumbai → Pune</li>
+                        <li>Kanpur → Lucknow</li>
+                        <li>Bengaluru → Chennai</li>
+                        <li>Pune → Mumbai</li>
+                        <li>All carpool routes</li>
+                        <li>All carpool destinations</li>
+                      </ul>
+
+
+                </div>
+
+                <div class="part-2">
+                   <ul>
+                    <li>How It Works</li>
+                    <li>About Us</li>
+                    <li>Help Centre</li>
+                    <li>Press</li>
+                    <li>We're Hiring!</li>
+                   </ul>
+                </div>
+
+                <div class="part-3">
+
+                       <div class="drop-down">
+                        <select>
+                            <option value="option1">English</option>
+                            <option value="option2">Hindi</option>
+                            <option value="option3">French</option>
+                        </select>
+                       </div>
+
+                         <div  class="images">
+                      <a href="#"><img src="/assets/seven.svg" alt="image"></a>        
+                         <a href="#"><img src="/assets/eight.svg" alt="image"></a>     
+                         <a href="#"><img src="/assets/nine.svg" alt="image"></a>     
+                         <a href="#"><img src="/assets/ten.svg" alt="image"></a>     
+                         </div>
+
+                </div>
+
           </div>  
 
 
