--- a/public/style/home.css
+++ b/public/style/home.css
@@ -211,7 +211,75 @@
 }
 
 .mid-5{
-     height: 400px;
-      background-color: #ededed;
+       height: 400px;
+        background-color: #ededed;
          color: #054652;
+         display: flex;
+          justify-content: space-between;
+
+       margin: 8px;  
+        border-radius: 8px;
 }
+
+.images a img{
+     height: 69px;
+     width: 44px;
+     fill: #00aff5;
+}
+
+.dropdown {
+     position: relative;
+     display: inline-block;
+   
+ }
+
+ .dropdown select {
+     padding: 5px;
+     border: 1px solid #ccc;
+     border-radius: 4px;
+ }
+
+  .part-1{
+     margin: 6px;
+
+  }
+
+  .part-1 ul{
+     list-style: none;
+  }
+
+  .part-1 ul li{
+       margin-bottom: 30px;
+         margin-left: 30px;
+          margin-top: 20px;
+  }
+
+  .part-1 p{
+    font-size: 30px;
+      margin-bottom: 4px;
+       margin-left: 4px;
+         margin-top: 6px;
+  }
+
+
+  .part-2{
+    
+  }
+  .part-2 ul{
+     list-style: none;
+  }
+
+  .part-2 ul li{
+     margin: 30px;
+       font-size: 18px;
+  }
+  
+
+  .part-3{
+       display: flex;
+         flex-direction: column;
+         justify-content: center;
+           gap: 15px;
+          margin-left: 12px;
+  }
+
