--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,11 +16,11 @@
 
                   <div class="main-header-2" >
                              <ul class="main-header-2-list">
-                                <li><a href="#"> <i class="fa-solid fa-house"></i> Home</a></li>
+                                <li> <a href="#"> <i class="fa-solid fa-house"></i> Home</a></li>
                                 <li> <i class="fas fa-search"></i> <input type="text" placeholder="  ...Search for ride"></li>
                                 <li> <a href="#">  <i class="fa-solid fa-plus"></i>  Publish a ride</a> </li>
-                                <li><a href="#"> <i class="fa-solid fa-user-plus"></i> Sign-Up</a></li>
-                                <li ><a href="#"><i class="fa-solid fa-right-to-bracket"></i> Sign-In</a> </li>
+                                <li> <a href="#"> <i class="fa-solid fa-user-plus"></i> <%=user.username%></a></li>
+                                 <li><a href="/logout">log out</a></li>
                                </ul>
                   </div>
 
