fetching ride details

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,7 +32,7 @@
 
               <div class="mid1-form">
 
-                <form action="/submit-ride-details" method="post">
+                <form action="/users-wants-ride" method="post">
 
                   <div> <i class="fa-solid fa-location-dot"></i> <input class="mid1-input"  type="text" name="source" placeholder="  ...Leaving from" ></div>    
                   <div> <i class="fa-solid fa-location-dot"></i> <input class="mid1-input"  type="text" name="destination" placeholder="  ...Going to"></div>  
