--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
                              <ul class="main-header-2-list">
                                 <li> <a href="/home"> <i class="fa-solid fa-house"></i> Home</a></li>
                                 <li> <i class="fas fa-search"></i> <input type="text" placeholder="  ...Search for ride"></li>
-                                <li> <a href="#">  <i class="fa-solid fa-plus"></i>  Publish a ride</a> </li>
+                                <li> <a href="/publishRide">  <i class="fa-solid fa-plus"></i>  Publish a ride</a> </li>
                                 <li> <a href="#"> <i class="fa-solid fa-user-plus"></i> <%=user.username%></a></li>
                                  <li><a href="/logout">log out</a></li>
                                </ul>
