--- a/views/ridesDetails.ejs
+++ b/views/ridesDetails.ejs
@@ -54,7 +54,10 @@
         <p>
           <strong>Source:</strong> <%= ride.source %><br>
           <strong>Destination:</strong> <%= ride.destination %><br>
-          <strong>Price:</strong> <%= ride.price %><br>
+          <strong>Total Price For 1 Passenger:</strong> <%= ride.price %><br>
+          <strong>Total Expected Time (it may takes more than expected):</strong> <%= ride.time %><br>
+          <strong>Car Name:</strong> <%= ride.carName %><br>
+          <strong>Drivers Instructions:</strong> <%= ride.instruction%><br>
           <!-- Add more details based on your Ride model -->
         </p>
         
